# RedNeuronal

./: 3a  CMakeLists.txt  Graphic.cpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkFit.cpp  NeuralNetworkImpl.cpp  NeuralNetworkSetterData.hpp  NeuralNetwork_fit.cpp  NeuralNetwork_fit.hpp  NeuralNetwork_impl.cpp  NeuralNetwork_impl.hpp  Neuron.cpp  Neuron.hpp  NeuronActivation.hpp  main.cpp  tags
checkpoints/: checkpoint_2024-7-10_13_13_19.ckpt  checkpoint_2024-7-10_13_15_32.ckpt  checkpoint_2024-7-10_13_17_45.ckpt  checkpoint_2024-7-10_13_19_58.ckpt  checkpoint_2024-7-10_13_29_10.ckpt  checkpoint_2024-7-10_13_29_38.ckpt  checkpoint_2024-7-10_13_30_35.ckpt  checkpoint_2024-7-10_13_30_7.ckpt  checkpoint_2024-7-10_15_34_0.ckpt  checkpoint_2024-7-10_17_25_18.ckpt  checkpoint_2024-7-11_11_43_37.ckpt  checkpoint_2024-7-11_11_43_43.ckpt  checkpoint_2024-7-11_12_30_12.ckpt  checkpoint_2024-7-12_11_29_41.ckpt  checkpoint_2024-7-15_16_35_36.ckpt  checkpoint_2024-7-15_16_35_37.ckpt  checkpoint_2024-7-15_16_35_38.ckpt  checkpoint_2024-7-15_16_36_2.ckpt  checkpoint_2024-7-15_16_36_3.ckpt  checkpoint_2024-7-15_16_42_50.ckpt  checkpoint_2024-7-15_16_44_58.ckpt  checkpoint_2024-7-15_16_46_17.ckpt  checkpoint_2024-7-15_16_47_36.ckpt  checkpoint_2024-7-15_16_48_56.ckpt  checkpoint_2024-7-15_16_50_16.ckpt  checkpoint_2024-7-15_16_51_36.ckpt  checkpoint_2024-7-15_16_52_57.ckpt  checkpoint_2024-7-15_16_54_16.ckpt  checkpoint_2024-7-15_16_55_34.ckpt  checkpoint_2024-7-15_16_56_53.ckpt  checkpoint_2024-7-15_17_11_47.ckpt  checkpoint_2024-7-15_17_15_50.ckpt  (+21 more)
include/: Algorithm.hpp  (+14 more)
(+111 files in other folders)
